force-app/main/default/objects/Appel_qualite__c/Appel_qualite__c.object-meta.xml
<CustomObject>
    <label>Appel qualité</label>
    <nameField>
        <displayFormat>AQ-{000000}</displayFormat>
        <label>Appel qualité Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appels qualités</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>