force-app/main/default/objects/Appel_qualite__c/fields/elements_conformes__c.field-meta.xml
<CustomField>
    <fullName>elements_conformes__c</fullName>
    <label>Éléments conformes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Elements_conforme</valueSetName>
    </valueSet>
</CustomField>