force-app/main/default/objects/Appel_qualite__c/fields/Score_commercial__c.field-meta.xml
<CustomField>
    <fullName>Score_commercial__c</fullName>
    <formula>IMAGE(
IF(TECH_Score_commercial__c &lt; 2, &quot;/img/samples/stars_000.gif&quot;,
IF(TECH_Score_commercial__c &lt; 4, &quot;/img/samples/stars_100.gif&quot;,
IF(TECH_Score_commercial__c &lt; 6, &quot;/img/samples/stars_200.gif&quot;,
IF(TECH_Score_commercial__c &lt; 8, &quot;/img/samples/stars_300.gif&quot;,
IF(TECH_Score_commercial__c &lt; 10, &quot;/img/samples/stars_400.gif&quot;, &quot;/img/samples/stars_500.gif&quot;
))))),
&quot;Rating&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score commercial</label>
    <type>Text</type>
</CustomField>