force-app/main/default/objects/Appel_qualite__c/fields/TECH_Score_commercial__c.field-meta.xml
<CustomField>
    <fullName>TECH_Score_commercial__c</fullName>
    <description>Score donné par le client entre 0 et 10</description>
    <label>Score commercial</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>