force-app/main/default/objects/Appel_qualite__c/fields/TECH_Score_conformite__c.field-meta.xml
<CustomField>
    <fullName>TECH_Score_conformite__c</fullName>
    <label>Score de conformité</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>