force-app/main/default/objects/Appel_qualite__c/fields/Type_vente__c.field-meta.xml
<CustomField>
    <fullName>Type_vente__c</fullName>
    <label>Type de vente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_vente</valueSetName>
    </valueSet>
</CustomField>