force-app/main/default/objects/Appel_qualite__c/validationRules/VR_001.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_001</fullName>
    <active>true</active>
    <description>Score du client comprit entre 0 et 10</description>
    <errorConditionFormula>TECH_Score_commercial__c &lt; 0 ||  TECH_Score_commercial__c &gt; 10</errorConditionFormula>
    <errorMessage>Attention le score du commercial doit être compris 0 et 10</errorMessage>
</ValidationRule>